welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:11: error: not found: value ASpeed
	if (vitesse(speed, isBirthday) > 61 && ASpeed(speed, isBirthday) < 80  ){
                                               ^caughtSpeeding:23: error: type mismatch;
 found   : Unit
 required: Int
	if(isBirthday){
        ^