welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (vitesse(speed, isBirthday)<60){
		return 0;
	}
	if (vitesse(speed, isBirthday)== 61 ){
		return 1;
	}
	if (vitesse(speed, isBirthday)== 80 ){
		return 1;
	}
	if (vitesse(speed, isBirthday) > 61 && ASpeed(speed, isBirthday) < 80  ){
		return 1;
	}else{
		return 2;
	}
}


def vitesse (speed:Int, isBirthday:Boolean) :Int = {
	if(!isBirthday){
		return speed;
	}
	if(isBirthday){
		return ( 5 + speed);
	}
}
